[package]
name = "rebels-in-the-sky"
version = "1.7.1"
edition = "2024"
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Anarchic spacepirates playing basketball in your terminal"
readme = "README.md"
homepage = "https://github.com/ricott1/rebels-in-the-sky"
repository = "https://github.com/ricott1/rebels-in-the-sky"
keywords = ["cli", "pirates", "rebels", "game"]
categories = ["games"]
include = [
    "/src",
    "/assets",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
]

[lib]
name = "rebels"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
directories = { version = "6.0.0", default-features = false }
flate2 = { version = "1.1.9", features = ["zlib-ng"], default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
gif = { version = "0.14.2", default-features = false, features = ["std"] }
glam = { version = "0.33.2", default-features = false, features = ["i16", "std", "u32"] }
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
imageproc = { version = "=0.25.0", default-features = false, features = ["rayon"] }
include_dir = { version = "0.7.4", default-features = false }
itertools = { version = "0.15.0", default-features = false, features = ["use_std"] }
libp2p = { path = "../../vendor/libp2p-0.56.0", version = "=0.56.0", default-features = false, features = [
    "autonat",
    "dcutr",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "noise",
    "quic",
    "relay",
    "serde",
    "tcp",
    "tokio",
    "yamux",
]}
log = { version = "0.4.33", default-features = false, features = ["std"] }
rand = { version = "=0.8.6", default-features = false, features = ["std"] }
rand_chacha = { version = "=0.3.1", default-features = false, features = ["std"] }
rand_distr = { version = "=0.4.3", default-features = false, features = ["std"] }
ratatui = { version = "=0.30.2", default-features = false, features = ["crossterm", "layout-cache", "underline-color", "unstable-backend-writer"] }
serde = { version = "=1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
serde_repr = { version = "0.1.20", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
strum = { version = "0.28.0", default-features = false, features = ["derive", "std"] }
strum_macros = { version = "0.28.0", default-features = false }
tokio = { path = "../../vendor/tokio-1.52.3", version = "=1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tokio-util = { path = "../../vendor/tokio-util-0.7.18", version = "=0.7.18", default-features = false }
ratatui-textarea = { version = "0.9.2", default-features = false, features = ["crossterm"] }
unicode-width = { version = "0.2", default-features = false, features = ["cjk"] }
uuid = { version = "1.23.3", default-features = false, features = ["std", "v4", "serde"] }

# Feature deps
http-body-util = { version = "=0.1.3", default-features = false, optional = true }
hyper = { version = "=1.9.0", default-features = false, features = ["client", "http1"], optional = true }
hyper-rustls = { version = "=0.27.9", default-features = false, features = ["http1", "tls12", "webpki-roots"], optional = true }
hyper-util = { version = "=0.1.20", default-features = false, features = ["client-legacy", "http1", "tokio"], optional = true }
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["alloc", "tls12", "zeroize"], optional = true }
symphonia = { version = "0.5.5", default-features = false, features = ["mp3"], optional = true }
tinyaudio = { version = "2.0.0", default-features = false, features = ["alsa"], optional = true }
url = { version = "2.5.8", default-features = false, features = ["std"], optional = true }

[features]
default = ["audio"]
audio = ["dep:http-body-util", "dep:hyper", "dep:hyper-rustls", "dep:hyper-util", "dep:rustls-rustcrypto", "dep:symphonia", "dep:tinyaudio", "dep:url"]
relayer = []

[target.'cfg(any(target_os = "trueos", target_os = "zkvm"))'.dependencies]
trueos = { path = "../../api" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("trueos", "zkvm"))'] }

[workspace]

[patch.crates-io]
hickory-proto = { path = "../../vendor/hickory-proto-0.25.2" }
hickory-resolver = { path = "../../vendor/hickory-resolver-0.25.2" }
if-watch = { path = "../../vendor/if-watch-3.2.2" }
libp2p = { path = "../../vendor/libp2p-0.56.0" }
libp2p-allow-block-list = { path = "../../vendor/libp2p-allow-block-list-0.6.0" }
libp2p-autonat = { path = "../../vendor/libp2p-autonat-0.15.0" }
libp2p-connection-limits = { path = "../../vendor/libp2p-connection-limits-0.6.0" }
libp2p-core = { path = "../../vendor/libp2p-core-0.43.2" }
libp2p-dcutr = { path = "../../vendor/libp2p-dcutr-0.14.1" }
libp2p-dns = { path = "../../vendor/libp2p-dns-0.44.0" }
libp2p-gossipsub = { path = "../../vendor/libp2p-gossipsub-0.49.4" }
libp2p-identify = { path = "../../vendor/libp2p-identify-0.47.0" }
libp2p-identity = { path = "../../vendor/libp2p-identity-0.2.14" }
libp2p-kad = { path = "../../vendor/libp2p-kad-0.48.0" }
libp2p-mdns = { path = "../../vendor/libp2p-mdns-0.48.0" }
libp2p-noise = { path = "../../vendor/libp2p-noise-0.46.1" }
libp2p-quic = { path = "../../vendor/libp2p-quic-0.13.1" }
libp2p-relay = { path = "../../vendor/libp2p-relay-0.21.1" }
libp2p-request-response = { path = "../../vendor/libp2p-request-response-0.29.0" }
libp2p-swarm = { path = "../../vendor/libp2p-swarm-0.47.1" }
libp2p-swarm-derive = { path = "../../vendor/libp2p-swarm-derive-0.35.1" }
libp2p-tcp = { path = "../../vendor/libp2p-tcp-0.44.1" }
libp2p-tls = { path = "../../vendor/libp2p-tls-0.6.2" }
libp2p-yamux = { path = "../../vendor/libp2p-yamux-0.47.0" }
mio = { path = "../../vendor/mio-1.2.0" }
quinn = { path = "../../vendor/quinn-0.11.9" }
quinn-proto = { path = "../../vendor/quinn-proto-0.11.14" }
quinn-udp = { path = "../../vendor/quinn-udp-0.5.14" }
ring = { path = "../../vendor/ring-0.17.14" }
socket2 = { path = "../../vendor/socket2-0.6.3" }
tokio = { path = "../../vendor/tokio-1.52.3" }
tokio-macros = { path = "../../vendor/tokio-macros-2.7.0" }
tokio-util = { path = "../../vendor/tokio-util-0.7.18" }
